--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-agp = "8.3.1"
+agp = "8.3.2"
 detektCli = "1.23.6"
 kotlin = "1.9.0"
-coreKtx = "1.12.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 appcompat = "1.6.1"
 ktlint = "0.50.0"
-material = "1.11.0"
-activity = "1.8.2"
+material = "1.12.0"
+activity = "1.9.0"
 constraintlayout = "2.1.4"
 
 [libraries]
@@ -24,10 +24,12 @@ android-material = { group = "com.google.android.material", name = "material", v
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-startup = {group = "androidx.startup", name = "startup-runtime", version = "1.1.1"}
-androidx-ktx-activity = { group = "androidx.activity", name = "activity-ktx", version = "1.7.2" }
-androidx-ktx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version = "1.6.1" }
-androidx-ktx-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version = "2.6.2" }
-androidx-ktx-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version = "2.6.2" }
+androidx-ktx-activity = { group = "androidx.activity", name = "activity-ktx", version = "1.9.0" }
+androidx-ktx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version = "1.7.1" }
+androidx-ktx-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version = "2.8.0" }
+androidx-ktx-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version = "2.8.0" }
+dagger-hilt = { group = "com.google.dagger", name = "hilt-android", version = "2.51.1" }
+dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version = "2.51.1" }
 
 [bundles]
 mvvm = [
@@ -40,3 +42,4 @@ mvvm = [
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
+daggerHilt = { id = "com.google.dagger.hilt.android", version = "2.51.1" }
