feat: communicate with broadcast

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <queries>
         <intent>
             <action android:name="com.wx.action.CHAMELEON" />
+            <data
+                android:host="chameleon"
+                android:scheme="wx" />
         </intent>
     </queries>
 
