--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="com.wx.chameleon.PERMISSION" />
 
     <application
         android:allowBackup="true"
@@ -10,8 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ChameleonPage"
-        tools:targetApi="31">
+        android:theme="@style/Theme.ChameleonPage">
         <activity
             android:name=".app.MainActivity"
             android:exported="true">
